--- a/success.html
+++ b/success.html
@@ -16,7 +16,7 @@
         <h1 class="name" id="displayName"></h1>
         <h3 id="successTitle">Welcome to our world!!!</h3>
         <p id="displayText"></p>
-        <a href="/index.html"><button class="btn logoutButton">Logout</button></a>
+        <a href="https://kirandon.github.io/LueurTech_Internship_Task/"><button class="btn logoutButton">Logout</button></a>
     </div>
 
     
